workspace = { members = ["algorithms/bst", "algorithms/stack", "rustlang/cow-more-use", "rustlang/iter_fold", "rustlang/iter_next", "rustlang/keyword_ref", "rustlang/slice_split", "rustlang/str_example", "rustlang/vec-example", "rustlang/vec_alloc", "rustlang/vec_fold", "rustlang/vec_from_raw_parts", "rustlang/while-let"] }
[package]
name = "hellorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.1"
