workspace = { members = ["algorithms/bst", "algorithms/bubblesort", "algorithms/bucketsort", "algorithms/countingsort", "algorithms/deque", "algorithms/insertsort", "algorithms/linklist", "algorithms/liststack", "algorithms/mergesort", "algorithms/queue", "algorithms/quicksort1", "algorithms/quicksort2", "algorithms/radixsort", "algorithms/radixsort1", "algorithms/selectsort", "algorithms/shellsort", "algorithms/stack", "algorithms/timsort", "rustlang/box_option_take", "rustlang/cow-more-use", "rustlang/iter_fold", "rustlang/iter_next", "rustlang/keyword_ref", "rustlang/slice_split", "rustlang/str_example", "rustlang/vec-example", "rustlang/vec_alloc", "rustlang/vec_binsearch", "rustlang/vec_fold", "rustlang/vec_from_raw_parts", "rustlang/while-let"] }
[package]
name = "hellorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.1"
