[package]
name = "vector_ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = { version = "0.5.*", features = ["num-complex"] }
ndarray = { version = "0.15.*", features = ["approx-0_5"] }
num-complex = { version = "0.4.*" }

[workspace]